[CYB-99] Page jump now functional on both share and unshare views; Added highlighting for unshare view; Fixed minor CSS (width size)

--- a/app/assets/stylesheets/_engagement_index.scss
+++ b/app/assets/stylesheets/_engagement_index.scss
@@ -51,13 +51,19 @@
   }
   .dc-main {
     margin: 0 auto;
-    width: 70%;
+    width: 90%;
+  }
+  .dc-mouse-pointer {
+    cursor: pointer;
   }
   .dc-note {
     margin-top: 50px;
   }
-  .dc-pointer-hand th {
+  .dc-pointer-hand {
     cursor: pointer;
+  }
+  .dc-score-jump-link {
+    margin-top: 10px;
   }
   .dc-sort-controls {
     margin-bottom: -25px;
