--- a/app/assets/stylesheets/_engagement_index_landing_page.scss
+++ b/app/assets/stylesheets/_engagement_index_landing_page.scss
@@ -63,7 +63,7 @@
   .dc-main {
     margin: 0 auto;
     margin-bottom: 50px;
-    width: 75%;
+    width: 90%;
   }
   .dc-note {
     margin-top: 50px;
